# buzzers

./: Cargo.toml  README.md  buzzer-case.stl  dist-workspace.toml  instructions.md  interface.py  notes.md  protocol.md
.github/workflows/: release.yml
3Dmodels/: buzzer-case.stl  buzzer.stl  buzzerwiderLEDhole.stl  rectangular-buzzer.stl
3Dmodels/digikey-models/: PM3XXX.igs  README.md  RP3502ARED.STEP
CIRCUITPY/: boot_out.txt  code.py
CIRCUITPY/CIRCUITPY/: code.py  script.py
Hinge box with a premounted lid (Print at once) - 1155457/: LICENSE.txt  README.txt
Hinge box with a premounted lid (Print at once) - 1155457/files/: Hinge_Box-55-110-15.stl  Hinge_Box-55-110-25.stl  Hinge_Box-70-120-20.stl
buzzer-pcb/: buzzer-pcb-B_Cu.gbr  buzzer-pcb-B_Mask.gbr  buzzer-pcb-B_Paste.gbr  buzzer-pcb-B_Silkscreen.gbr  buzzer-pcb-Edge_Cuts.gbr  buzzer-pcb-F_Cu.gbr  buzzer-pcb-F_Mask.gbr  buzzer-pcb-F_Paste.gbr  buzzer-pcb-F_Silkscreen.gbr  buzzer-pcb-NPTH.drl  buzzer-pcb-PTH.drl  buzzer-pcb-job.gbrjob  buzzer-pcb.kicad_pcb  buzzer-pcb.kicad_prl  buzzer-pcb.kicad_pro  buzzer-pcb.kicad_sch  fp-info-cache  freerouting.dsn  temp-freerouting.dsn  ~buzzer-pcb.kicad_pcb.lck
buzzer-pcb/Library.pretty/: A-2004-3-4-LP-N-R.kicad_mod  XTAL_ZTA-2.44MG.kicad_mod  (+1 more)
buzzer-ui/: Cargo.toml  Planetfall_III_-_Packet_8.json?ex=6976a508&is=69755388&hm=b2151675ee09c98f497d1d56be1167fee35ec25facb3b4ae213b3839b5347763&  dist-workspace.toml
buzzer-ui/src/: app.rs  main.rs  serial.rs
code/: abacus.py  boot.py  circuitpython.py  code.py  codelatest.py  protocol.py
src/: main.rs
wix/: main.wxs
