[package]
name = "buzzer-ui"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/AnnikaCodes/buzzers"
homepage = "https://worldbrightening.net/buzzers/"
description = "software to control Annika's quizbowl buzzers"
authors = ["Annika Larson"]
license = "MIT"

[package.metadata.wix]
upgrade-guid = "7381217D-E5EC-4385-85B1-DB9205FF430C"
path-guid = "BEF44801-221E-456F-AC25-DD065443E523"
license = false
eula = false

[dependencies]
chrono = "0.4.42"
eframe = "0.33.3"
egui = "0.33.3"
serialport = "4.8.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

